feat(EdrManagementApi): refactor open transfer + dsp protocol switch
